--- a/config/cable.yml
+++ b/config/cable.yml
@@ -8,4 +8,4 @@ test:
 production:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: ten_k_hours_production
+  channel_prefix: tachifigures_production
