--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,12 +7,12 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket-<%= Rails.env %>
+amazon:
+  service: S3
+  access_key_id: <%= ENV['AMAZON_S3_ACCESS_KEY'] %>
+  secret_access_key: <%= ENV['AMAZON_S3_SECRET'] %>
+  region: us-east-1
+  bucket: tachifigures-<%= Rails.env %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
